--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.datasource.url=jdbc:mariadb://144.122.71.144:8084/db_group_23
 spring.datasource.username=group_23
 spring.datasource.password=eEsczCnbBUe8
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.serialization.INDENT_OUTPUT=true
