Add hibernate mysql dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 hibernate.jdbc.time_zone=UTC
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
+
 spring.jackson.serialization.INDENT_OUTPUT=true
